# integration-agent

./: .gitignore  README.md  pyproject.toml
agent/: __init__.py  agent.py
agent/tools/: __init__.py  parser.py  search.py  type_detector.py
agent/utils/: __init__.py  helpers.py  sheets.py
examples/: create_integrations_sheets.py  detect_integration_types.py  test_integration.py
tests/: test_agent.py  test_helpers.py  test_parser.py
